force-app/main/default/objects/Apttus_Config2__AssetAttributeValueHistory__c/Apttus_Config2__AssetAttributeValueHistory__c.object-meta.xml
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <label>Asset Attribute Value History</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Attribute Value History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>