force-app/main/default/objects/Apttus_Config2__AssetAttributeValueHistory__c/fields/Apttus_Config2__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
    <description>ID of the associated asset line item history</description>
    <inlineHelpText>ID of the associated asset line item history</inlineHelpText>
    <label>Asset Line Item History</label>
    <referenceTo>Apttus_Config2__AssetLineItemHistory__c</referenceTo>
    <relationshipLabel>Asset Attribute Values</relationshipLabel>
    <relationshipName>AssetAttributeValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>