force-app/main/default/objects/Apttus_Config2__AssetAttributeValueHistory__c/fields/Apttus_Config2__Vendor__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Vendor__c</fullName>
    <description>Product Vendor</description>
    <inlineHelpText>Product Vendor</inlineHelpText>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>